docs: add guardz ecosystem references and improve documentation
- Add Related Packages section to README.md
- Document guardz ecosystem integration in API.md
- Add ecosystem keywords to package.json
- Add repository field to package.json
- Highlight seamless integration between guardz packages

--- a/package.json
+++ b/package.json
@@ -19,10 +19,18 @@
     "postmessage",
     "eventstream",
     "dom-events",
-    "security"
+    "security",
+    "guardz",
+    "guardz-ecosystem",
+    "runtime-validation",
+    "type-safe"
   ],
   "author": "Thien Nguyen",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thiennp/guardz-event.git"
+  },
   "bugs": {
     "url": "https://github.com/thiennp/guardz-event/issues"
   },
