--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guardz-event",
-  "version": "1.1.0",
+  "version": "1.8.0",
   "description": "Type-safe event handling with runtime validation using guardz for unsafe data from 3rd parties",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,13 @@
     "build": "tsc && tsc-alias",
     "prepublishOnly": "npm run build",
     "test": "npx jest",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts",
+    "format:check": "prettier --check src/**/*.ts",
+    "type-check": "tsc --noEmit",
+    "check": "npm run type-check && npm run lint && npm run format:check"
   },
   "keywords": [
     "typescript",
@@ -36,14 +42,21 @@
   },
   "homepage": "https://github.com/thiennp/guardz-event#readme",
   "peerDependencies": {
-    "guardz": "^1.7.0"
+    "guardz": "^1.8.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
-    "guardz": "^1.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
+    "guardz": "^1.8.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^30.0.4",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.0",
     "tsc-alias": "^1.8.10",
